Added DAOs for sources

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@ junit_family = xunit1
 
 markers =
     common: marks tests for the common libraries
+    dao: mark the tests for daos
 
 
 testpaths =
