--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,9 @@ junit_family = xunit1
 
 markers =
     common: marks tests for the common libraries
-    dao: mark the tests for daos
+    dao: marks the tests for daos
+    job: marks the tests for jobs
+    transformation: marks the tests for different transformations used in jobs
 
 
 testpaths =
